--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"ip":"play.vanevo.fun jangan lupa join :v",
-	"port": "25571",
+	"ip":"de13.plutonodes.net",
+	"port": "25284",
 	"name": "saya wibu1518",
 	"auto-night-skip":"false",
 	"login-enabled":"false",
