--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-	"ip":"de13.plutonodes.net",
-	"port": "25284",
-	"name": "saya wibu1518",
+	"ip":"ZeanSMP.aternos.me",
+	"port": "54442",
+	"name": "saya wibu918",
 	"auto-night-skip":"false",
 	"login-enabled":"false",
 	"register-cmd":"/register pass123 ",
